--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 				<br><br>
 		
 				<button class="btn btn-primary btn-block btn-sm" disabled>Clique aqui</button>
-				<button class="btn btn-primary btn-block" disabled>Clique aqui</button>
-				<button class="btn btn-outline-primary btn-block btn-lg" disabled>Clique aqui</button>
+				<button class="btn btn-primary btn-block" >Clique aqui</button>
+				<button class="btn btn-outline-primary btn-block btn-lg" >Clique aqui</button>
 		
 			</div>
 		
